tests/error/misc_errors/state_result_not_qubit.err
Error: Type mismatch (at $FILE:10:24)
   | 
 8 | @guppy(module)
 9 | def main(x: int) -> None:
10 |     state_result("tag", x)
   |                         ^ Expected expression of type `qubit`, got `int`

Guppy compilation failed due to 1 previous error
